Remove github token
- Remove `githubToken` from `UserData`
- Move `TokenService` to `eclipse` package
- Remove github token update logic from `TokenService`
- clientRegistrationRepository null check